--- a/package.json
+++ b/package.json
@@ -4,17 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --prod"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler-cli": "~13.1.0",
     "@angular/cdk": "^13.1.1",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
@@ -25,12 +21,11 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "angular-gauge": "^4.0.0",
-     "express": "^4.17.2",
+    "express": "^4.17.2",
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-     "typescript": "~4.5.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
@@ -45,9 +40,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
-  }
-   "engines": {
-    "node": "16.13.1",
-    "npm": "8.1.2"
   }
 }
